overflow hidden on section not card-conatienr, fixes mobile view for overlap of founder img

--- a/client/style.css
+++ b/client/style.css
@@ -155,15 +155,16 @@ header h1 {
     height: 453px;
     z-index: 0;
 }
+section {
+    overflow: hidden;
+}
 .card-container {
     position: relative;
     display: flex;
     align-items: end;
     justify-content: end;
     width: auto;
-    z-index: 1;
     margin-left: -95px;
-    overflow: hidden;
 }
 .content-card {
     background-color: var(--darkpurple);
@@ -177,7 +178,6 @@ header h1 {
     right: 50px;
     width: 173px;
     height: 157px;
-    z-index: 3;
 }
 
 /*--- Footer ---*/
@@ -197,7 +197,7 @@ footer {
 
 
 /* ---Tablet---*/
-@media (min-width: 600px) and (max-width: 900px) {
+@media (min-width: 599px) and (max-width: 900px) {
     body {
         font-size: 16px;
     }
@@ -261,10 +261,13 @@ footer {
     .card-container > .content-card > h1 {
     font-size: 37px;
     }
+    .section-two {
+        height: auto;
+    }
     .main-container2{
         padding: 0 25px;
-        height: 510px;
-        width: 900px;
+        height: 430px;
+        width: 550px;
     }
     .content-card {
         padding: 30px;
@@ -272,6 +275,10 @@ footer {
     .co-founder-img {
         width: 265px;
         height: 267px;
+    }
+    .bottom-swirly {
+        bottom: -75px;
+        right: 5px;
     }
 }
 
@@ -333,6 +340,7 @@ footer {
     padding: 0 5px;
     width: 100vw;
     flex-direction: column;
+    overflow: visible;
 } 
 .card-container {
     margin-left: 5px;
@@ -340,7 +348,7 @@ footer {
 .content-card {
     text-align: center;
     padding: 30px;
-    margin: -50px auto 0 auto;
+    margin:-56px auto 0 auto;
 }
 .btn-green-background {
     margin-top: 8px;
